--- a/src/app/pages/menu/contratacoes/espaco/reserva-espaco-details/reserva-espaco-details.page.html
+++ b/src/app/pages/menu/contratacoes/espaco/reserva-espaco-details/reserva-espaco-details.page.html
@@ -1,16 +1,15 @@
 <app-header url="reserva-espaco"></app-header>
 
 <ion-content>
-  <div class="container">
-    <ng-container *ngIf="locationManager.get()">
-      <app-page-title [title]="locationManager.get().data.title"></app-page-title>
-    </ng-container>
+  <div *ngIf="locationManager.get()" class="container">
 
-    <app-reservation-card></app-reservation-card>
+    <app-page-title [title]="locationManager.get().title"></app-page-title>
 
-    <app-reserve-slide [slides]="locationManager.get().data.images"></app-reserve-slide>
+    <app-reservation-card [item]="locationManager.get()"></app-reservation-card>
 
-    <div class="common-text" [innerHTML]="locationManager.get().data.text"></div>
+    <app-reserve-slide [slides]="locationManager.get().images"></app-reserve-slide>
+
+    <div class="common-text" [innerHTML]="locationManager.get().text"></div>
 
   </div>
 </ion-content>
